--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 {% block title %}MapleZ{% endblock %}
 
 {% block head %}
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+{{ super() }}
 {#<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
 {#<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
 <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -85,5 +85,13 @@
 {{ super() }}
 {{ moment.include_moment() }}
 <script src="https://cdn.bootcss.com/bootstrap-tokenfield/0.12.0/bootstrap-tokenfield.js"></script>
-
+<script t>
+$('#tokenfield').tokenfield({
+  autocomplete: {
+    source: ['Python','Flask','WEB','Java','数据结构','PAT'],
+    delay: 100
+  },
+  showAutocompleteOnFocus: true
+})
+</script>
 {% endblock %}
