--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -33,6 +33,9 @@
                      {{ form.subtitle(id="subtitle", class="form-control", required="", placeholder=form.subtitle.label.text )}}
                  </div>
                  <div class="form-group col-md-12">
+                     {{ form.subtitle(id="image", class="form-control", required="", placeholder=form.image.label.text )}}
+                 </div>
+                 <div class="form-group col-md-12">
                      {{ form.label(type="text", class="token-input ui-autocomplete-input", id="tokenfield", autocomplete="on", required="", placeholder=form.label.label.text) }}
                  </div>
                  <div class="form-group col-md-12">
