--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -100,7 +100,7 @@ body {
     /*transform: translateX(-50%) translateY(-50%) translateZ(0);*/
     position: inherit;
     max-width: 1000px;
-    padding: 35px;
+    padding-bottom: 35px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 35px;
@@ -149,7 +149,7 @@ body {
 * THUMB
 **/
 .card__thumb {
-  height: 245px;
+  height: 350px;
   overflow: hidden;
   background-color: #000;
   -webkit-transition: height 0.5s;
@@ -164,9 +164,18 @@ body {
   transition: opacity 0.5s, -webkit-transform 0.5s;
   transition: opacity 0.5s, transform 0.5s;
   transition: opacity 0.5s, transform 0.5s, -webkit-transform 0.5s;
+    width:100%;
+    /*height:0;*/
+    /*padding-bottom: 100%;*/
+    /*overflow:hidden;*/
+    /*background-position: center center;*/
+    /*background-repeat: no-repeat;*/
+    /*-webkit-background-size:cover;*/
+    /*-moz-background-size:cover;*/
+    /*background-size:cover;*/
 }
 .card:hover .card__thumb {
-  height: 130px;
+  height: 250px;
 }
 
 .card:hover .card__thumb img {
@@ -180,8 +189,9 @@ body {
 **/
 .card__body {
     position: relative;
-    height: 140px;
+    height: 100px;
     padding-top: 20px;
+    padding-left: 25px;
     -webkit-transition: height 0.5s;
     transition: height 0.5s;
     cursor: pointer;
