--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,6 @@
 {{ super() }}
 {#<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
 {#<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
-<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdn.bootcss.com/bootstrap-tokenfield/0.12.0/css/bootstrap-tokenfield.min.css" rel="stylesheet">
 <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
@@ -85,10 +83,10 @@
 {{ super() }}
 {{ moment.include_moment() }}
 <script src="https://cdn.bootcss.com/bootstrap-tokenfield/0.12.0/bootstrap-tokenfield.js"></script>
-<script t>
+<script>
 $('#tokenfield').tokenfield({
   autocomplete: {
-    source: ['Python','Flask','WEB','Java','数据结构','PAT'],
+    source: ['red','blue','green','yellow','violet','brown','purple','black','white'],
     delay: 100
   },
   showAutocompleteOnFocus: true
