--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,8 @@
 {#<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">#}
 <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.bootcss.com/bootstrap-tokenfield/0.12.0/css/bootstrap-tokenfield.min.css" rel="stylesheet">
 {% endblock %}
 
 {% block navbar %}
